--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: #F5F8F9;
+}
+
+header {
+    background-color: white;
+}
 /* Proprietà logo */
 .logo {
     display: inline-block;
@@ -17,4 +25,34 @@
     vertical-align: middle;
     margin-left: 20px;
 }
+
+/* Sezioni con bottoni */
+
+#container {
+    width: 80%;
+    margin: auto;
+    background-color: white;
+    margin-top: 40px;
+    border-radius: 3%;
+    padding: 10px;
+}
+
+.task {
+    padding: 5px;
+    background-color: #46ADF1;
+    color: white;
+    border-radius: 10%;
+    border: 0;
+    margin-left: 5%;
+}
+
+.task-2 {
+    padding: 5px;
+    background-color: white;
+    color: #DBDFE1;
+    border-radius: 10%;
+    border: 2px solid #DBDFE1;
+}
+
+
 
