--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
 
 header {
     background-color: white;
+    padding: 20px;
 }
 /* Proprietà logo */
 .logo {
@@ -33,7 +34,7 @@ header {
     margin: auto;
     background-color: white;
     margin-top: 40px;
-    border-radius: 3%;
+    border-radius: 5px;
     padding: 10px;
 }
 
@@ -64,7 +65,7 @@ main {
     background-color: white;
     margin-top: 2px;
     padding: 40px;
-    border-radius: 3%;
+    border-radius: 5px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 25px;
